# vst3-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
examples/: again.rs
src/: audio_processor.rs  basic_plugin.rs  buffer.rs  bus.rs  common.rs  component.rs  edit_controller.rs  events.rs  factory.rs  host_application.rs  io.rs  lib.rs  logging.rs  parameter.rs  parameter_changes.rs  parameters.rs  plug_view.rs  plugin.rs  plugin_base.rs  speaker.rs  stream.rs  types.rs  unit.rs  unit_info.rs  unknown.rs
src/util/: atomic_float.rs  mod.rs
