[package]
name = "vst3"
version = "0.1.0"
authors = ["Mirko Covizzi <mrkcvzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst3-sys = { path = "../vst3-sys" }
vst3-com = { path = "../vst3-sys/com" }
log = "0.4.8"

[[example]]
name = "again"
crate-type = ["cdylib"]
